@@ -1,3 +1,8 @@
+2004-05-11    <chromakode@llama>
+
+	* fgdiag/lib/unittests/test_test.py (Module): Added preliminary
+	unit test
+
 2004-05-07    <chromakode@llama>
 
 	* fgdiag/lib/prompts.py (prompt_for_id): Added catchall SQLError
